# fullmark

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: performance.yml
docs/: ARCHITECTURE.md  fidelity-gate-results.md  performance-validation.md  performance.md
scripts/: build-install.sh  fidelity-gate.mjs  generate-vault.mjs  perf-bench.mjs  wikilink-test.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  launch_services.rs  mod.rs
src/components/: Welcome.tsx
src/components/CommandPalette/: QuickSwitcher.tsx
src/components/Editor/: BlockEditor.tsx  EditorPane.tsx  SlashMenu.tsx  SourceEditor.tsx  ViewToggle.tsx
src/components/Settings/: SettingsModal.tsx
src/components/Sidebar/: FileTree.tsx  Sidebar.tsx
src/components/Tabs/: TabBar.tsx
src/services/: external-links.ts  fs-bridge.ts  link-targets.ts  path-utils.ts  themes.ts
src/services/editor/: extensions.ts
src/services/editor/extensions/: code-highlight.ts  slash-menu.ts  wikilink.ts
src/stores/: tabs.ts  ui.ts  workspace.ts
src/styles/: editor.css  globals.css  prose.css  themes.css
tests/: editor-save.test.ts  fidelity-production.test.ts  perf-harness.test.ts  save-race.test.ts  setup.ts  tabs-restore.test.ts  workspace-race.test.ts  workspace-search.test.ts
tests/e2e/web/: fullmark.spec.ts
